app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: api
spec: 
 replicas: 2
 selector:
  matchLabels:
   app: app2
 template:
  metadata:
   labels:
    app: app2
  spec:
   containers:
   - name: app2-nginx
     image: nginx
     ports:
      - containerPort: 80
     volumeMounts:
     - name: config-vol
       mountPath: /usr/share/nginx/html/index.html
       subPath: app2.html
                       
   volumes:
   - name: config-vol
     configMap:
      name: app-configmap
        


---
apiVersion: v1
kind: Service
metadata:
 name: app2-service
 namespace: api
spec:
 selector:
  app: app2
 ports:
 - name: service-port2
   protocol: TCP
   port: 80
   targetPort: 80
 externalIPs:
 - 35.10.0.5
