ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
 namespace: api
 annotations:
  kubernetes.io/ingress.class: "nginx"
   #nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
 ingressClassName: nginx
 tls:
 - hosts:
   - app1.test.com
   secretName: my-ssl
 rules:
  - host: app1.test.com
    http:
     paths:
     - path: /app1
       pathType: Prefix
       backend:
        service:
         name: app1-service
         port:
          number: 80
  - host: app2.test.com
    http:
     paths:
     - path: /app2
       pathType: Prefix
       backend:
        service:
         name: app2-service
         port:
          number: 80
